<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/asteroid_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asteroid_namn"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/asteroid_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:text="@string/avst_nd"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/absolute_magnitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:text="@string/absolut_magnitud"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/estimated_diameter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:text="@string/est_diameter"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/relativeVelocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:text="@string/relativ_fart"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/isPotentiallyHazardousAsteroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:text="@string/asteroid_farlig"
        android:textAlignment="gravity"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/asteroid_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:text="@string/n_rkomst_datum"
        android:textAlignment="gravity"
        android:textSize="14sp" />

    <Button
        android:id="@+id/orbitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orbit_view" />

</LinearLayout>
